Fixed font size for home on mobile so that the nav bar doesnt get cut off

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ body{
 
 #name {
     font-family: var(--fontTimes);
-    font-size: larger;
     color: var(--one)
 }
 
@@ -297,6 +296,7 @@ main{
     #Home {
         padding-top: 15vh;
         padding-bottom: 25vh;
+        font-size: 150%;
     }
 
     img {
